# AzarStream

./: .dockerignore  .env.example  .env.testing  .gitignore  BROADCAST_DIRECT.md  BROADCAST_SETUP.md  COOKIES.md  DEPLOYMENT.md  Dockerfile  FIXES_APPLIED.md  PERFORMANCE.md  README.md  debug_yt.py  debug_yt_all.py  debug_yt_cookies.py  main.py  po_token.py  pyproject.toml  pytest.ini  reproduce_yt_v3.py  start_both.sh  tash
.github/workflows/: ci.yml
OldDes/resources/: base.html
app/: __init__.py  config.py  lifecycle.py  logging.py
app/controllers/: __init__.py  admin.py  admin_mgmt.py  ads.py  auth.py  bots.py  cache_channel.py  cache_channels.py  cookies.py  health.py  index.py  media_upload.py  queues.py  stats.py  subscription.py  telemetry.py  tracks.py  users.py  webhook.py
app/middleware/: auth.py  rate_limit.py
bot/: __init__.py  keyboards.py  processor.py  search_handler.py
database/: __init__.py  connection.py  env.py
database/versions/: 75055e3a550d_generating_mysql_migrate.py  aee6c8383933_updating.py
i18n/: lang.py
models/: __init__.py  admin.py  ads.py  base.py  bot.py  cache_channel.py  download.py  language.py  media.py  stats.py  subscription.py  track.py  user.py  user_global.py
repositories/: __init__.py  ad.py  admin.py  base.py  bot.py  cache_channel.py  ingest_job.py  media.py  subscription.py  track.py  uow.py  user.py
resources/: base.html
resources/admin/: dashboard.html  login.html  telemetry.html
schemas/: admin.py
scripts/: extract_cookies.py  install.sh  seed_admin.py  uninstall.sh  update.sh
scripts/nginx/: mediaflow.conf
scripts/systemd/: mediaflow-scheduler.service  mediaflow-web.service  mediaflow-worker.service  telegram-bot-api.service
services/: __init__.py  ad.py  ad_duration.py  ad_formatting.py  admin.py  advanced_rate_limiter.py  auth.py  bot_manager.py  cache.py  cache_channel.py  content_filter.py  download_service.py  ingest.py  metrics.py  official_bot.py  queue.py  queue_monitor.py  rate_limiter.py  subscription.py  telemetry.py  track.py  user.py  user_agents.py  user_download_queue.py
services/downloaders/: __init__.py  aria2c_engine.py  base.py  base_engine.py  cookie_manager.py  downloader.py  factory.py  ffmpeg_engine.py  protocols.py  registry.py  types.py  ytdlp_engine.py
services/media/: __init__.py  generic.py  instagram.py  pinterest.py  tiktok.py  vk.py  youtube.py
storage/cookies/: README.md
tests/: conftest.py
tests/e2e/: test_download_flow.py
tests/integration/: test_api.py  test_api_extended.py  test_new_features.py  test_webhook.py
tests/performance/: test_performance.py
tests/unit/: test_ad_duration.py  test_ads_extended.py  test_auth.py  test_cache.py  test_cache_channel.py  test_downloader_extended.py  test_downloaders.py  test_ingest_helpers.py  test_metrics.py  test_queue_monitor.py  test_rate_limiter.py  test_repositories.py  test_repositories_extended.py  test_search_url_guard.py  test_services.py  test_subscription.py  test_telemetry.py  test_track_cache_mirrors.py  test_track_votes.py  (+2 more)
workers/: __init__.py  config.py  ingest.py  queue.py  scheduler.py  tasks.py  worker.py
(+51 files in other folders)
